--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "@aheed/tumbler-logic",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "module": "lib/index.js",
+  "typings": "lib/index.d.ts",
   "scripts": {
-    "test": "exit 0"
+    "test": "exit 0",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -18,5 +21,8 @@
   "homepage": "https://github.com/aheed/tumbler-logic#readme",
   "publishConfig": {
     "@aheed:registry": "https://npm.pkg.github.com"
+  },
+  "devDependencies": {
+    "typescript": "^5.0.4"
   }
 }
