--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "module": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "test": "exit 0",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "build": "tsc"
   },
   "repository": {
@@ -23,6 +25,9 @@
     "@aheed:registry": "https://npm.pkg.github.com"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   }
 }
